fixes an editor overlaps which have a long help text (T526167) (#767)
* fixes an editor overlaps which have a long help text

* fix dxForm styles

--- a/styles/widgets/common/form.less
+++ b/styles/widgets/common/form.less
@@ -143,6 +143,7 @@
 
 .dx-field-item-help-text {
     font-style: italic;
+    white-space: normal;
 }
 
 .dx-field-item-label-location-left {
